<resources>
    <string name="app_name">
        <!--
            App Name
        -->
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="stringTextView">Morse Code Translator</string>
    <string name="action_settings">Settings</string>
    <string name="additionally">Additionally</string>
    <string name="translatorRussianToMorse">Translator (Russian -> Morse)</string>
    <string name="analyzeMorseToRussian">Analyze (Morse -> Russian)</string>
    <string name="input_text">Input text</string>
    <string name="result">Result</string>

    <string name="error_text">Вспышка камеры недоступна!</string>
    <string name="error_title">Ошибка! Нет вспышки!</string>
    <string name="exit_message">Выход</string>
    <string name="switchSound">Включить звук</string>
    <string name="switchShine">Включить светодиод</string>
    <string name="switchVibration">Включить выбрацию</string>
    <string name="title_activity_setting">Setting</string>
    <string name="MCTranslator">MCTranslator</string>
    <string name="switchCompatSound">Включить звук</string>
    <string name="switchCompatShine">Включить светодиод</string>
    <string name="switchCompatVibration">Включить вибрацию</string>
    <string name="textViewLanguage">Morse to -> </string>
    <string name="textViewSpeed">Скорость реакции на нажатие (наносек): +0</string>



    <string name="start_activity_for_result_btn">Start Recognizer Activity for result</string>
    <string name="recognition_results_hint">Recognition results</string>

    <string name="current_state_hint">Current state</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="cancel_btn">Cancel</string>
</resources>
