<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:aw="http://schemas.android.com/apk/res-auto"
    xmlns:waveview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.admin.morsecodetranslator.Home"
    tools:showIn="@layout/app_bar_home"
    android:background="@color/colorWorkspaceBackground">

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GridView"
        android:layout_below="@+id/EditTextResult"
        android:layout_alignParentStart="true"
        android:numColumns="6"
        android:stretchMode="columnWidth"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:nestedScrollingEnabled="false"
        android:visibility="invisible"
        android:layout_alignParentLeft="true" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/SwitchCompatShine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/switchCompatShine"
        android:textOff="OFF"
        android:textOn="ON"
        app:showText="true"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/SwitchCompatSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/switchCompatSound"
        android:textOff="OFF"
        android:textOn="ON"
        app:showText="true"
        android:padding="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SwitchCompatShine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_alignParentRight="true" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/SwitchCompatVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/switchCompatVibration"
        android:textOff="OFF"
        android:textOn="ON"
        app:showText="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        android:layout_below="@+id/SwitchCompatSound"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:layout_alignParentRight="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeekBarSpeed"
        android:layout_below="@+id/SwitchCompatVibration"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:max="30000000"
        android:indeterminate="false"
        android:progress="1"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewSpeed"
        android:layout_below="@+id/SeekBarSpeed"
        android:layout_alignParentStart="true"
        android:text="@string/textViewSpeed"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewLanguage"
        android:id="@+id/TextViewLanguage"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_below="@+id/TextViewSpeed"
        android:layout_toStartOf="@+id/SpinnerLanguage"
        android:layout_toLeftOf="@+id/SpinnerLanguage" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SpinnerLanguage"
        android:entries="@array/LanguageList"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_alignTop="@+id/TextViewLanguage"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditText"
        android:hint="@string/input_text"
        android:layout_alignWithParentIfMissing="false"
        android:enabled="true"
        android:background="@color/colorEditTextBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/dimenEditTextPadding"
        android:focusable="false"
        android:lines="1"
        android:inputType="textImeMultiLine"
        android:longClickable="false"
        android:singleLine="true"
        android:visibility="visible"
        android:layout_alignEnd="@+id/SpinnerLanguage"
        android:layout_alignRight="@+id/SpinnerLanguage"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImageButtonDelete"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/EditText"
        android:layout_alignBottom="@+id/EditText"
        android:background="@color/colorEditTextBackground"
        android:src="@drawable/ic_mic_black_24px"
        android:contentDescription="@string/action_settings"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/EditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextResult"
        android:hint="@string/result"
        android:layout_alignWithParentIfMissing="false"
        android:enabled="true"
        android:background="@color/colorEditTextBackground"
        android:padding="@dimen/dimenEditTextPadding"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/EditText"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:lines="1"
        android:longClickable="false"
        android:inputType="textImeMultiLine"
        android:visibility="visible"
        android:layout_toStartOf="@+id/ImageButtonDelete"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/ImageButtonDelete" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImageButtonSound"
        android:layout_alignTop="@+id/EditTextResult"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/GridView"
        android:layout_toEndOf="@+id/EditTextResult"
        android:src="@drawable/ic_volume_up_black_24px"
        android:background="@color/colorEditTextBackground"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/EditTextResult"
        tools:ignore="ContentDescription"/>

    <com.shuyu.waveview.AudioWaveView
        android:id="@+id/audioWave"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/EditTextResult"
        android:layout_alignParentStart="true"
        waveview:waveColor="#FAFFFFFF"/>


</RelativeLayout>
